tests/snapshots/examples_fixtures/type_system__failing__05_runtime_float_string_arg_via_any.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/05_runtime_float_string_arg_via_any.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Float with String.

  --> examples/type_system/failing/05_runtime_float_string_arg_via_any.flx:12:1
   |
12 | area(dynamic)
   | ^^^^^^^^^^^^^
   | ------------- expected Float, found String


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Float with String.

  --> examples/type_system/failing/05_runtime_float_string_arg_via_any.flx:12:6
   |
12 | area(dynamic)
   |      ^^^^^^^
   |      ------- expected Float, found String
   |      ------- argument type is known at compile time

Help:
  argument #1 does not match function contract

Found 2 errors.
== stdout ==
<not executed>
